[metadata]
name = msdss-models-sklearn
version = 0.0.1
author = Richard Wen
author_email = rrwen.dev@gmail.com
description = Scikit-learn models for the Modular Spatial Decision Support Systems (MSDSS) framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rrwen/msdss-models-sklearn
project_urls =
    Bug Tracker = https://github.com/rrwen/msdss-models-sklearn/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir == src
packages = find:
install_requires = 
    msdss-models-api
    pandas
    scikit-learn >= 1.0.1
python_requires = >=3.8

[options.packages.find]
where = src